--- a/Front/BookStoreFront/src/app/welcome/welcome.component.html
+++ b/Front/BookStoreFront/src/app/welcome/welcome.component.html
@@ -1,12 +1,20 @@
+
 <div class="card-title">
   <mat-card-title>
     Welcome to Harry Potter's book shop !
   </mat-card-title>
 
-  <i class="material-icons">shopping_cart</i>
+  <i class="material-icons"><a [routerLink]="['/cart']" routerLinkActive="router-link-active" >shopping_cart</a></i>
 </div>
 
-<table mat-table [dataSource]="books" class="mat-elevation-z8">
+
+<mat-grid-list cols="1" rowHeight="50px"><mat-chip-list>
+    <mat-grid-tile *ngFor="let book of books" ><mat-chip color="primary" selected (click)="addABookToCart(book)">{{book.title}}      {{ book.price }}€ </mat-chip></mat-grid-tile>
+</mat-chip-list></mat-grid-list>
+
+
+
+<!-- <table mat-table [dataSource]="books" class="mat-elevation-z8">
   <ng-container matColumnDef="Title">
     <th mat-header-cell *matHeaderCellDef> Title </th>
     <td mat-cell *matCellDef="let book"> {{ book.title }} </td>
@@ -20,7 +28,7 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-</table>
+</table> -->
 
 <!-- <ul>
   <li *ngFor="let book of books">{{book.title}}</li>
