--- a/Front/BookStoreFront/src/app/cart/cart.component.html
+++ b/Front/BookStoreFront/src/app/cart/cart.component.html
@@ -3,15 +3,16 @@
 </mat-card-title>
 
 <mat-card>
-  You are about to pay: {{totalPrice}} €
+  You purchase will cost: {{totalPrice}} €
 </mat-card>
 
 <!-- <mat-grid-list cols="1" rowHeight="50px"><mat-chip-list>
     <mat-grid-tile *ngFor="let book of currentListOfBooks" ><mat-chip color="primary" selected>{{book.title}}</mat-chip></mat-grid-tile>
 </mat-chip-list></mat-grid-list> -->
 
-
 <div class='buttons'>
   <button mat-flat-button (click)="goToWelcomePage()" class='btnReturn'>Continue purchase</button>
-  <button mat-flat-button (click)="submitCart()" class='btnBuy'>Buy</button>
+  <button mat-flat-button (click)="submitCart()" class='btnBuy' disabled=true>Buy</button>
 </div>
+
+
